--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
+    "react-spring": "^9.7.3",
+    "react-toastify": "^9.1.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
